--- a/css/main.css
+++ b/css/main.css
@@ -184,14 +184,13 @@ header{
 	width: 7%;
 	margin: 0 5px;
 }
-.gabriela{
-	background-image: url(../img/fotos/equipo3.jpg);
-	background-size: 120%;
-	background-position: center 10%;
+.centrar-fot{
+	text-align: center;
+}
+.foto-circular{
 	width: 250px;
 	height: 250px;
 	border-radius: 200px;
-	margin: 0 120px;	
 }
 /* seccion blog */
 .box-cuatro{
@@ -247,46 +246,26 @@ header{
 /* seccion redes sociales */
 .box-cinco{
 	background-color: #515151;
-	width: 100%;
 }
 .rrss{
 	padding: 60px 0;
+	
 }
-.fb{
+.fb, .tw, .in, .em{
 	border: 1px solid white;
 	height: 250px;
-	width: 245px;
 }
-.tw{
-	border-top: 1px solid white;
-	border-right: 1px solid white;
-	border-bottom: 1px solid white;
-	height: 250px;
-	width: 245px;
-}
-.in{
-	border-top: 1px solid white;
-	border-right: 1px solid white;
-	border-bottom: 1px solid white;
-	height: 250px;
-	width: 245px;	
-}
-.em{
-	border-top: 1px solid white;
-	border-right: 1px solid white;
-	border-bottom: 1px solid white;
-	height: 250px;
-	width: 245px;	
-}
+
 .rrss img{
 	width: 20%;
 	margin-left: 180px;
-	margin-top: -35px;
+	margin-top: -40px;
 } 
 .rrss h2{
-	margin-top: 15px;
 	margin-left: 20px;
+	margin-top: 20px;
 }
+
 .rrss a{
 	text-decoration: none;
 	color: white;	
